[gd_scene load_steps=7 format=3 uid="uid://rumvotveqal5"]

[ext_resource type="Script" path="res://src/common/globals.gd" id="1_noqpm"]
[ext_resource type="PackedScene" uid="uid://bajrj1qpyvp16" path="res://src/levels/level_01.tscn" id="2_1x2wt"]
[ext_resource type="PackedScene" uid="uid://d2w1trabeinsa" path="res://src/levels/level_02.tscn" id="3_7kch5"]
[ext_resource type="Script" path="res://src/common/music_manager.gd" id="3_h14hn"]
[ext_resource type="PackedScene" uid="uid://2cukog0h3mes" path="res://src/levels/level_03.tscn" id="4_7qpu6"]

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_q1nu8"]
stream_count = 3
stream_0/volume = 0.0
stream_1/volume = -60.0
stream_2/volume = 0.0

[node name="Globals" type="Node"]
script = ExtResource("1_noqpm")
levels = Array[PackedScene]([ExtResource("2_1x2wt"), ExtResource("3_7kch5"), ExtResource("4_7qpu6")])

[node name="MusicManager" type="Node" parent="."]
script = ExtResource("3_h14hn")

[node name="game_music" type="AudioStreamPlayer" parent="MusicManager"]
process_mode = 3
stream = SubResource("AudioStreamSynchronized_q1nu8")

[node name="menu_music" type="AudioStreamPlayer" parent="MusicManager"]
process_mode = 3

[node name="murder_music" type="AudioStreamPlayer" parent="MusicManager"]
